--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             alt="Icon for the side"
           />
         </div>
+        <div id="mobile-menu"></div>
         <h2 class="intro-greet">
           Hey There.
           <br />
@@ -442,5 +443,6 @@
       src="https://kit.fontawesome.com/e966a3bd22.js"
       crossorigin="anonymous"
     ></script>
+    <script src="mobile-menu.js"></script>
   </body>
 </html>
